[tool.poetry]
name = "cfmtoolbox"
version = "0.1.0"
description = "A plugin-based toolbox for working with cardinality-based feature models"
authors = ["Jonathan Ehwald <github@ehwald.info>", "Daniel-Delong Zhang <danielzhang728@gmail.com>", "Anna Chen <chenxanna@gmail.com>", "Valentin Kaczmarek <valentinkaczmarek@yahoo.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.3"}
uvlparser = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
cfmtoolbox = "cfmtoolbox.__main__:__name__"

[tool.poetry.plugins."cfmtoolbox.plugins"]
random-sampling = "cfmtoolbox.plugins.random_sampling"
uvl-export = "cfmtoolbox.plugins.uvl_export"
uvl-import = "cfmtoolbox.plugins.uvl_import"
json-import = "cfmtoolbox.plugins.json_import"
json-export = "cfmtoolbox.plugins.json_export"
featureide-import = "cfmtoolbox.plugins.featureide_import"
debug = "cfmtoolbox.plugins.debug"
big-m = "cfmtoolbox.plugins.big_m"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = "--cov=cfmtoolbox --cov-report term-missing --cov-report html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
