[tool.poetry]
name = "cfmtoolbox"
version = "0.2.2"
description = "A plugin-based toolbox for working with cardinality-based feature models"
authors = ["Jonathan Ehwald <github@ehwald.info>", "Daniel-Delong Zhang <danielzhang728@gmail.com>", "Anna Chen <chenxanna@gmail.com>", "Valentin Kaczmarek <valentinkaczmarek@yahoo.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/KIT-TVA/cfmtoolbox/"
repository = "https://github.com/KIT-TVA/cfmtoolbox/"
documentation = "https://kit-tva.github.io/cfmtoolbox/"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.3"}
uvlparser = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings-python = "^1.11.1"

[tool.poetry.scripts]
cfmtoolbox = "cfmtoolbox.__main__:__name__"

[tool.poetry.plugins."cfmtoolbox.plugins"]
conversion = "cfmtoolbox.plugins.conversion"
random-sampling = "cfmtoolbox.plugins.random_sampling"
uvl-export = "cfmtoolbox.plugins.uvl_export"
uvl-import = "cfmtoolbox.plugins.uvl_import"
json-import = "cfmtoolbox.plugins.json_import"
json-export = "cfmtoolbox.plugins.json_export"
featureide-import = "cfmtoolbox.plugins.featureide_import"
debugging = "cfmtoolbox.plugins.debugging"
big-m = "cfmtoolbox.plugins.big_m"
one-wise-sampling = "cfmtoolbox.plugins.one_wise_sampling"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = "--cov=cfmtoolbox --cov-report term-missing --cov-report html"

[tool.mypy]
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
