[tool.poetry]
name = "cfmtoolbox-random-sampling"
version = "0.1.0"
description = "A cfmtoolbox plugin for random sampling"
authors = ["Jonathan Ehwald <github@ehwald.info>", "Daniel-Delong Zhang <danielzhang728@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cfmtoolbox = {path = "../cfmtoolbox", develop = true}

[tool.poetry.plugins."cfmtoolbox.plugins"]
random-sampling = "cfmtoolbox_random_sampling"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
