[tool.poetry]
name = "cfmtoolbox-uvl-export"
version = "0.1.0"
description = "A cfmtoolbox plugin capable of exporting uvl files"
authors = ["Jonathan Ehwald <github@ehwald.info>", "Daniel-Delong Zhang <danielzhang728@gmail.com>", "Anna Chen <chenxanna@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cfmtoolbox = {path = "../cfmtoolbox", develop = true}

[tool.poetry.plugins."cfmtoolbox.plugins"]
uvl-export = "cfmtoolbox_uvl_export"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
