[tool.poetry]
name = "cfmtoolbox-uvl-import"
version = "0.1.0"
description = "A cfmtoolbox plugin capable of importing uvl files"
authors = ["Jonathan Ehwald <github@ehwald.info>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cfmtoolbox = {path = "../cfmtoolbox", develop = true}

[tool.poetry.plugins."cfmtoolbox.plugins"]
uvl-import = "cfmtoolbox_uvl_import"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
