[tool.poetry]
name = "cfmtoolbox"
version = "0.1.0"
description = "A plugin-based toolbox for working with cardinality-based feature models"
authors = ["Jonathan Ehwald <github@ehwald.info>", "Daniel-Delong Zhang <danielzhang728@gmail.com>", "Anna Chen <chenxanna@gmail.com>", "Valentin Kaczmarek <valentinkaczmarek@yahoo.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.3"}

[tool.poetry.scripts]
cfmtoolbox = "cfmtoolbox.__main__:__name__"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
